# ApacheBeamLocal

./: .gitignore  Dockerfile  ReadMe.md  create_graph.sh  main.py  pyproject.toml  visual.ipynb
